--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -816,6 +816,16 @@ knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
 
 You can visualize any $\delta$ value (i.e., population $d$-value) using the rpsychologist [website](https://rpsychologist.com/d3/cohend/). This website also provides a number of interesting statistics such as the percentage of overlapping values in two populations for a given $\delta$/d value.
 
+Cohen's benchmarks for standardized mean differences are displayed in the table below. These should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
+
+|  Cohen (1988) Label  | Value        |
+|             :-: |  :-:         | 
+| Small           | $\delta$ = .20 |
+| Medium          | $\delta$ = .50 |
+| Large           | $\delta$ = .80 |
+
+
+
 ## Population relations
 
 Often researchers are interested in the extent to which variability in one variable is related to variability in another variable. For example, to what extent does variability in weight related to variability in height? In other words, is there a relation between weight and height? One approach to this question to calculate a regression equation relating weight to height - this provides an index of the relation in the original units of the variables. Here we focus on a second approach to describing the relation between variable, namely, the correlation. The correlation is standardized effect size for the relation between two variables.
@@ -905,6 +915,14 @@ dev.off()
 ```{r rhoplot, fig.cap="Populations of various strengths.", echo = FALSE, out.height="80%"}
 knitr::include_graphics("ch_populations/images/rho_example.png")
 ```
+
+Cohen's benchmarks for correlations (i.e., $\rho$) are displayed in the table below. These should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
+
+|  Cohen (1988) Label  | Value        |
+|             :-: |  :-:         | 
+| Small           | $\rho$ = .10 |
+| Medium          | $\rho$ = .30 |
+| Large           | $\rho$ = .50 |
 
 \newpage
 
