--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -948,3 +948,13 @@ Cohen's benchmarks for correlations (i.e., $\rho$) are displayed in the table be
 
 10. SMD is indicated at the population level using the Greek letter delta ($\delta$). At the sample level we tend to use the term "$d$-value" or "Cohen's $d$".
 
+
+## Self Assessment 
+
+1. What is the difference between parameters and statistics?
+
+2. Are the formula (excluding notation differences) always the same for parameters and statistics? If not, explain why not? 
+
+3. Grade 4 students in Ontario are taller than the Grade 3 students. Specifically, $\delta$ = 0.30. How do you interpret this information with respect to standard deviations?
+
+
