--- a/book.bib
+++ b/book.bib
@@ -258,3 +258,14 @@
   year={2005},
   publisher={Peachpit Press}
 }
+
+@article{lee1988thirteen,
+  title={Thirteen ways to look at the correlation coefficient},
+  author={Lee Rodgers, Joseph and Nicewander, W Alan},
+  journal={The American Statistician},
+  volume={42},
+  number={1},
+  pages={59--66},
+  year={1988},
+  publisher={Taylor \& Francis Group}
+}
