--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,14 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-datasauRus,
+  title = {datasauRus: Datasets from the Datasaurus Dozen},
+  author = {Steph Locke and Lucy {D'Agostino McGowan}},
+  year = {2018},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=datasauRus},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel {
