--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -752,7 +752,7 @@ The above calculation is a ratio. Ratios are used to compare two numbers. The nu
 
 In this case, the numerator is the extent to which Ian is taller than the mean height for males ($X_{Ian} - \mu_{males}$). This numerator is compared to the denominator -- which is the standard deviation for males ($\sigma_{males}$). The resulting number is 1.50 which indicates the numerator is 1.50 times larger than the denominator. In other words, Ian is 1.50 standard deviations taller than the average male. This is a standardized score for Ian's height - it expresses the difference between his height and the mean height in standard deviation units.
 
-#### Population means
+#### Independent Group: Population Means
 
 The same approach to generating standardized scores can be applied to population means. Consider a situation where we have population of male heights ($\mu = 170$, $\sigma = 10$) and a population of female heights ($\mu = 165$, $\sigma = 10$). Notice that both populations have the same standard deviation.
 
@@ -803,6 +803,19 @@ It is important to also look at the original units when interpreting results - n
 ```{r dex3, fig.scap = "Caveats for standardized mean difference", fig.cap="The three scenarios in this figure illustrate that a Standardized Mean Difference (i.e., population $d$-value or $\\delta$) can remain constant across scenarios when there is a change in the raw difference (i.e., $\\Delta M$) between the population means. This SMD is consistent across the three scenario despite a change in the mean difference using original units; this occurs because the standard deviations also changes across the three scenarios.", echo = FALSE, out.width="100%"}
 knitr::include_graphics("ch_populations/images/dvalue_ex3.png")
 ```
+
+### Other 4d$-values
+
+
+
+#### Independent Groups: Control Group Comparison
+
+
+
+
+#### Repeated Measures
+
+
 
 ### Benchmarks
 
