--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -804,16 +804,26 @@ It is important to also look at the original units when interpreting results - n
 knitr::include_graphics("ch_populations/images/dvalue_ex3.png")
 ```
 
-### Other 4d$-values
+### Other $\delta$-values
+
+The calculate of independent groups $\delta$-values aboved assumed that the two populations had identical standard deviations. In some scenarios, you might reasonably expect the standard deviations to be different. For example, you might expect a drug to affect the mean level of the dependent variable but also make people more similar to each other. In that case, you would use the standard deviation of the control group as the reference/denominator when calculating the $\delta$-value as illustrated in Formula XX below:
+
+\begin{equation} 
+\delta =  \frac{\mu_{1} - \mu_{2}}{\sigma_{control}}
+      (\#eq:popsmdcontrolch4)
+\end{equation} 
 
 
 
-#### Independent Groups: Control Group Comparison
+Additionally, you might wish to 
 
 
 
+\begin{equation} 
+\delta =  \frac{\mu_{diff}}{\sigma_{diff}}
+      (\#eq:popsmdcontrolch4)
+\end{equation} 
 
-#### Repeated Measures
 
 
 
